--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,6 +1,6 @@
 <header>
-	<div class="centered">
-		<h1>
+	<!-- <div class="centered">
+		 <h1>
 			<a href="https://ckeditor.com/ckeditor-5/" target="_blank" rel="noopener noreferrer">
 				<img src="https://c.cksource.com/a/1/logos/ckeditor5.svg" alt="CKEditor 5 logo" /> CKEditor 5
 			</a>
@@ -17,16 +17,14 @@
 				</li>
 			</ul>
 		</nav>
-	</div>
+	</div> -->
 </header>
 
 <main>
 	<div class="message">
 		<div class="centered">
-			<h1>CKEditor5 real-time collaboration sample for Angular</h1>
-			<p>
-				Open this sample in another browser tab to start real-time collaborative editing.
-			</p>
+			<h1>Go ahead and edit your article!</h1>
+			
 		</div>
 	</div>
 	<div class="centered">
@@ -41,13 +39,4 @@
 	</div>
 </main>
 
-<footer>
-	<div class="centered">
-		<p>
-			<a href="https://ckeditor.com/ckeditor-5/" target="_blank" rel="noopener noreferrer">CKEditor 5</a> – Rich text editor of tomorrow, available today
-		</p>
-		<p>
-			Copyright © 2003-2019, <a href="https://cksource.com/" target="_blank" rel="noopener noreferrer">CKSource</a> – Frederico Knabben. All rights reserved.
-		</p>
-	</div>
-</footer>
+
