--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,5 +1,5 @@
 <header>
-	<div class="centered">
+	<!-- <div class="centered">
 		<h1>
 			<a href="https://ckeditor.com/ckeditor-5/" target="_blank" rel="noopener noreferrer">
 				<img src="https://c.cksource.com/a/1/logos/ckeditor5.svg" alt="CKEditor 5 logo" /> CKEditor 5
@@ -17,16 +17,14 @@
 				</li>
 			</ul>
 		</nav>
-	</div>
+	</div> -->
 </header>
 
 <main>
 	<div class="message">
 		<div class="centered">
-			<h1>CKEditor5 real-time collaboration sample for Angular</h1>
-			<p>
-				Open this sample in another browser tab to start real-time collaborative editing.
-			</p>
+			<h1>Go ahead and edit your document!</h1>
+
 		</div>
 	</div>
 	<div class="centered">
@@ -36,18 +34,7 @@
 		<div id="toolbar-container"></div>
 		<div class='row row-editor'>
 			<ckeditor [editor]="Editor" (ready)="onReady($event)" [config]="editorConfig" [data]="data"></ckeditor>
-			<div #sidebar class='sidebar'></div>
 		</div>
 	</div>
 </main>
 
-<footer>
-	<div class="centered">
-		<p>
-			<a href="https://ckeditor.com/ckeditor-5/" target="_blank" rel="noopener noreferrer">CKEditor 5</a> – Rich text editor of tomorrow, available today
-		</p>
-		<p>
-			Copyright © 2003-2019, <a href="https://cksource.com/" target="_blank" rel="noopener noreferrer">CKSource</a> – Frederico Knabben. All rights reserved.
-		</p>
-	</div>
-</footer>
