--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
  :root {
 	--ck-sample-base-spacing: 2em;
 	--ck-sample-color-white: #fff;
-	--ck-sample-color-green: #279863;
+	--ck-sample-color-red: #982727;
 	--ck-sample-container-width: 1285px;
 	--ck-sample-sidebar-width: 290px;
 	--ck-sample-editor-min-height: 200px;
@@ -183,7 +183,7 @@
   
   main .message {
 	padding: 0 0 var(--ck-sample-base-spacing);
-	background: var(--ck-sample-color-green);
+	background: var(--ck-sample-color-red);
 	color: var(--ck-sample-color-white);
   }
   
@@ -193,7 +193,7 @@
 	display: block;
 	height: 10em;
 	width: 100%;
-	background: var(--ck-sample-color-green);
+	background: var(--ck-sample-color-red);
 	position: absolute;
 	left: 0;
   }
