Front End Template Design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,4 +46,9 @@
 	</div>
 </div> -->
 
-<app-editor *ngIf="configurationSet" [configuration]="config" [channelId]="channelId" (ready)="onEditorReady($event)"></app-editor>
+<!-- <app-editor *ngIf="configurationSet" [configuration]="config" [channelId]="channelId" (ready)="onEditorReady($event)"></app-editor> -->
+
+
+
+
+ <router-outlet></router-outlet>
