--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,39 +1,8 @@
-<header>
-	<!-- <div class="centered">
-<<<<<<< HEAD
-		 <h1>
-=======
-		<h1>
->>>>>>> EditingHTMLPage
-			<a href="https://ckeditor.com/ckeditor-5/" target="_blank" rel="noopener noreferrer">
-				<img src="https://c.cksource.com/a/1/logos/ckeditor5.svg" alt="CKEditor 5 logo" /> CKEditor 5
-			</a>
-		</h1>
-
-		<nav>
-			<ul>
-				<li>
-					<a href="https://ckeditor.com/collaboration/" target="_blank" rel="noopener noreferrer">Website</a>
-				</li>
-				<li>
-					<a href="https://ckeditor.com/docs/ckeditor5/latest/features/collaboration/real-time-collaboration/real-time-collaboration.html"
-						target="_blank" rel="noopener noreferrer">Documentation</a>
-				</li>
-			</ul>
-		</nav>
-	</div> -->
-</header>
-
 <main>
 	<div class="message">
 		<div class="centered">
-<<<<<<< HEAD
-			<h1>Go ahead and edit your article!</h1>
-			
-=======
-			<h1>Go ahead and edit your document!</h1>
+			<h1>New Article</h1>
 
->>>>>>> EditingHTMLPage
 		</div>
 	</div>
 	<div class="centered">
@@ -46,8 +15,3 @@
 		</div>
 	</div>
 </main>
-
-<<<<<<< HEAD
-
-=======
->>>>>>> EditingHTMLPage
