--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,16 +1,27 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" routerLink="./" routerLinkActive="active">Admin</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li><a routerLink="./articles/approved" routerLinkActive="active">View Approved Articles</a></li>
-        <li><a routerLink="./articles/beta" routerLinkActive="active">View Beta Articles</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-          <li><a routerLink="/logout" routerLinkActive="active"> Logout</a></li>
-      </ul>
-    </div>
-  </nav>
-   
- <router-outlet></router-outlet>
+<nav class="navbar navbar-expand-md navbar-light bg-light rounded">
+  <a class="navbar-brand" routerLink="./" routerLinkActive="active">the DML Wiki</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="./Articles/All" routerLinkActive="active">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="./Articles/Approved" routerLinkActive="active">Approved</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="./Articles/Beta" routerLinkActive="active">Pending Approval</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class = "nav-link" routerLink="/logout" routerLinkActive="active"> Logout</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class = "container-fluid rounded bg-light h-100 mt-1 p-3">
+    <router-outlet></router-outlet>
+</div>
