--- a/src/app/admin/beta-articles/beta-articles.component.html
+++ b/src/app/admin/beta-articles/beta-articles.component.html
@@ -1,1 +1,28 @@
-<p>View All Beta Articles Here!</p>
+<div *ngIf="!populated" class="h-100 d-flex justify-content-center align-items-center">
+		<div class="spinner-border text-primary" style="width: 6rem; height: 6rem;" role="status">
+			<span class="sr-only"></span>
+		</div>
+	</div>
+	
+<div *ngIf="populated" class="card-group">
+	<div *ngFor="let article of articles">
+		<div class="card text-dark d-block m-3">
+			<div class="card-body">
+				<h5 class="card-title">{{article.name}}</h5>
+				<p class="card-text">
+					{{article.content}}
+				</p>
+			</div>
+			<div class="card-footer">
+				<div class="row d-flex justify-content-between m-3">
+					<button type="button" (click)="approveArticle(article)" class="btn btn-lg btn-success">
+						Approve
+					</button>
+					<button type="button" (click)="rejectArticle(article)" class="btn btn-lg btn-danger">
+						Reject
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
