--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,16 +1,39 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" routerLink="./" routerLinkActive="active">User</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a routerLink="./articles/create" routerLinkActive="active"> Create New Article </a></li>
-      <li><a routerLink="./articles/approved" routerLinkActive="active"> Approved Articles </a></li>
-      <li><a routerLink="./articles/beta" routerLinkActive="active"> Beta Articles </a></li>
+<nav class="navbar navbar-expand-md navbar-light bg-light rounded">
+  <a class="navbar-brand" routerLink="./" routerLinkActive="active">the DLM Wiki</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="./Articles/All/Approved" routerLinkActive="active">Home</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Your articles
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" routerLink="./Articles/Your/All" routerLinkActive="active">All</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" routerLink="./Articles/Your/Approved" routerLinkActive="active">Approved</a>
+          <a class="dropdown-item" routerLink="./Articles/Your/Beta" routerLinkActive="active">Beta</a>
+          <a class="dropdown-item" routerLink="./Articles/Your/Initial" routerLinkActive="active">Initial</a>
+          <a class="dropdown-item" routerLink="./Articles/Your/Rejected" routerLinkActive="active">Rejected</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" routerLink="./Articles/Your/Discarded" routerLinkActive="active">Discarded</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="./Articles/Your/New" routerLinkActive="active">Create New Article</a>
+      </li>
     </ul>
-    <ul class="nav navbar-nav navbar-right">
-        <li><a routerLink="/logout" routerLinkActive="active"> Logout</a></li>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class = "nav-link" (click)="logout()" routerLink="/logout" routerLinkActive="active"> Logout</a>
+      </li>
     </ul>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div class = "container-fluid rounded bg-light h-100 mt-1 p-3">
+  <router-outlet></router-outlet>
+</div>
