--- a/src/app/admin/beta-articles/beta-articles.component.html
+++ b/src/app/admin/beta-articles/beta-articles.component.html
@@ -14,6 +14,9 @@
 				</p>
 			</div>
 			<div class="card-footer">
+				<small class="text-muted">Submitted By: {{article.emailId}}</small>
+			</div>
+			<div class="card-footer">
 				<div class="row d-flex justify-content-between m-3">
 					<button type="button" (click)="approveArticle(article)" class="btn btn-lg btn-success">
 						Approve
