--- a/src/app/user/all-approved-articles/all-approved-articles.component.html
+++ b/src/app/user/all-approved-articles/all-approved-articles.component.html
@@ -14,6 +14,9 @@
 					{{article.content}}
 				</p>
 			</div>
+			<div class="card-footer">
+				<small class="text-muted">Submitted By: {{article.emailId}}</small>
+			</div>
 		</div>
 	</div>
 </div>
