--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -4,15 +4,10 @@
 			<div #presenceList class="d-none"></div>
 		</div>
 		<div class='row row-editor'>
-			<ckeditor [editor]="Editor" (ready)="onReady($event)" [config]="editorConfig" [data]="data"></ckeditor>
+			<!-- <ckeditor [editor]="Editor" (ready)="onReady($event)" [config]="editorConfig" [data]="data"></ckeditor> -->
 		</div>
 		<div class="row d-flex justify-content-between m-3">
-			<button type="button" class="btn btn-lg btn-primary">
-				Save
-			</button>
-			<button type="button" class="btn btn-lg btn-success">
-				Submit
-			</button>
+			
 		</div>
 	</div>
 	</div>
