--- a/src/app/user/article-viewer/article-viewer.component.html
+++ b/src/app/user/article-viewer/article-viewer.component.html
@@ -14,10 +14,10 @@
 </div>
 
 <div class="row d-flex justify-content-between m-3">
-	<button (click)="saveArticle()" type="button" class="btn btn-lg btn-primary">
+	<!-- <button (click)="saveArticle()" type="button" class="btn btn-lg btn-primary">
 		Save
 	</button>
 	<button (click)="deleteArticle()" type="button" class="btn btn-lg btn-danger">
 		Delete
-	</button>
+	</button> -->
 </div>
