--- a/src/app/user/initial-articles/initial-articles.component.html
+++ b/src/app/user/initial-articles/initial-articles.component.html
@@ -18,7 +18,7 @@
 						<button type="button" class="btn btn-lg btn-primary">
 							Edit
 						</button>
-						<button type="button" class="btn btn-lg btn-success">
+						<button (click)="submitArticle(article)" type="button" class="btn btn-lg btn-success">
 							Submit
 						</button>
 					</div>
