--- a/src/app/user/article-viewer/article-viewer.component.html
+++ b/src/app/user/article-viewer/article-viewer.component.html
@@ -1,23 +1,23 @@
-<div *ngIf="!articleCreated" class="h-100 d-flex justify-content-center align-items-center">
+<div *ngIf="!articleLoaded" class="h-100 d-flex justify-content-center align-items-center">
 	<div class="spinner-border text-primary" style="width: 6rem; height: 6rem;" role="status">
 		<span class="sr-only"></span>
 	</div>
 </div>
 
-<div *ngIf = "articleCreated" class="container mt-2">
+<div *ngIf = "articleLoaded" class="container mt-2">
 	<iframe
-			[src]="sanitizer.bypassSecurityTrustResourceUrl(padUrl)"
+			[src]="safeUrl"
 			width=100% height=550rem
 			class = "border border-secondary"
 			style="border-radius: 10px; overflow: hidden;">
 		</iframe>
 </div>
 
-<div class="row d-flex justify-content-between m-3">
-	<!-- <button (click)="saveArticle()" type="button" class="btn btn-lg btn-primary">
+<div *ngIf="!readOnly" class="row d-flex justify-content-between m-3">
+	<button (click)="saveArticle()" type="button" class="btn btn-lg btn-primary">
 		Save
 	</button>
 	<button (click)="deleteArticle()" type="button" class="btn btn-lg btn-danger">
 		Delete
-	</button> -->
+	</button>
 </div>
