--- a/src/app/user/discarded-articles/discarded-articles.component.html
+++ b/src/app/user/discarded-articles/discarded-articles.component.html
@@ -7,7 +7,7 @@
 <div *ngIf="populated" class="card-group">
 	<div *ngFor="let article of articles">
 		<div class="card text-dark d-block m-3">
-			<div class="card-body">
+			<div (click)="viewArticle(article)" class="card-body">
 				<h5 class="card-title">{{article.name}}</h5>
 				<p class="card-text">
 					{{article.content}}
