--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -22,7 +22,10 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" routerLink="./Articles/Your/Discarded" routerLinkActive="active">Discarded</a>
         </div>
-      </li>
+			</li>
+			<li class="nav-item">
+					<a class="nav-link" routerLink="./Articles/Your/Invited" routerLinkActive="active">Invited Articles</a>
+				</li>
       <li class="nav-item">
         <a class="nav-link" routerLink="./Articles/Your/New" routerLinkActive="active">Create New Article</a>
       </li>
