--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light rounded">
-  <a class="navbar-brand" routerLink="./" routerLinkActive="active">the DML Wiki</a>
+  <a class="navbar-brand" routerLink="./" routerLinkActive="active">the DLM Wiki</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
