--- a/src/app/user/create-article/create-article.component.html
+++ b/src/app/user/create-article/create-article.component.html
@@ -21,3 +21,42 @@
 		Delete
 	</button>
 </div>
+
+<ng-template id="articleNameModal" #articleNameModal let-modal>
+	<div class="modal-header text-dark">
+	 <h5 class="modal-title" id="inviteCollaboratorLabel">Name your article</h5>
+	</div>
+	
+	<div class="modal-body text-dark">
+	 <form [formGroup]="articleNameForm" (ngSubmit)="createArticle()">
+		<div class="form-group row">
+		 <label for="name" class="col-sm-4 col-form-label">Article Name</label>
+		 <div class="col-sm-8">
+			<input type="name" class="form-control" formControlName="name" id="name">
+		 </div>
+		</div>
+
+		<div class="modal-footer text-dark">
+			<div *ngIf="inviting" class="h-100 d-flex justify-content-center align-items-center">
+					<div class="spinner-border text-primary" style="width: 1rem; height: 1rem;" role="status">
+						<span class="sr-only"></span>
+					</div>
+			</div>
+			<div>
+					<button type="submit" class="btn btn-primary m-1">Continue</button>
+			</div>
+		 
+			<div *ngIf="successMessage!=null && successMessage!=''">
+					<div class = "container bg-success text-white rounded text-center">
+							{{successMessage}}
+					</div>  
+			</div>
+			<div *ngIf="errorMessage!=null && errorMessage!=''">
+					<div class = "container bg-danger text-white rounded text-center">
+							{{errorMessage}}
+					</div>        
+		</div>
+		</div>
+	 </form>
+	</div>
+ </ng-template>
