--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container h-100 d-flex justify-content-center align-items-center mt-5">
     <div class="jumbotron my-auto align-self-center">
         <h1 class="display-4 text-dark">DLM Wiki</h1>
-        <form [formGroup]="loginForm" (ngSubmit)="login()" style="color:#001011">
+        <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)" style="color:#001011">
             <div class="form-group">
                 <label for="email">Email address</label>
                 <input type="email" class="form-control" formControlName="email" id="email" placeholder="daniel@gmail.com">
@@ -10,7 +10,7 @@
                 <label for="password">Password</label>
                 <input type="password" class="form-control" formControlName="password" id="password">
             </div>
-            <div *ngIf="!loginInProgress" class="row">
+            <div *ngIf="!isLoading" class="row">
                 <button class="btn btn-block btn-success">
                     Login
                 </button>
@@ -19,7 +19,7 @@
                 </button>
             </div>
         </form>
-        <div *ngIf="loginInProgress" class="d-flex justify-content-center">
+        <div *ngIf="isLoading" class="d-flex justify-content-center">
             <div class="spinner-border text-dark text-center" role="status">
                 <span class="sr-only"></span>
             </div>
