--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="container h-100 d-flex justify-content-center align-items-center mt-2">
     <div class="jumbotron my-auto align-self-center">
         <h1 class="display-4 text-dark">Registration</h1>
-        <form [formGroup]="signUpForm" (ngSubmit)="register()" style="color:#001011">
+        <form [formGroup]="registerForm" (ngSubmit)="register(registerForm.value)" style="color:#001011">
             <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" class="form-control" formControlName="name" id="name" placeholder="John Doe">
