--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -13,11 +13,11 @@
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" class="form-control" formControlName="password" id="password">
-			</div>
-			<div class="form-group">
+						</div>
+			<!-- <div class="form-group">
                 <label for="confirmPassword">Confirm Password</label>
                 <input type="password" class="form-control" formControlName="confirmPassword" id="confirmPassword">
-            </div>
+            </div> -->
             <div *ngIf="!registrationInProgress" class="row">
                 <button class="btn btn-block btn-success">
                     Register
